resolve code smell